networking/loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: someService
spec:
  selector:
    app: someApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  clusterIP: 10.0.0.10
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.0.2.123
