networking/simpleService.yaml
apiVersion: v1
kind: Service
metadata:
  name: webLayer
spec:
  selector:
    app: webApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7777
