networking/ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: multi-host-ingress
spec:
  rules:
  - host: some.domain.com
    http:
      paths:
      - backend:
          serviceName: web1
          servicePort: 80
  - host: other.domain.com
    http:
      paths:
      - backend:
          serviceName: web2
          servicePort: 80
